use cleaner API